[tool.poetry]
name = "walnut"
version = "0.1.0"
description = "Read or write a BBrowser study"
authors = [
    "Tri Le <tri@bioturing.com>",
    "Vu Nguyen <vu@bioturing.com>",
    "Hao Tran <hao@bioturing.com>"
]
license = "LICENSE"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [ "*.db" ]

[tool.poetry.dependencies]
python = ">=3.6.0"
pydantic = "*"
numpy = "*"
pycryptodome = "*"
h5py = "*"
fastapi = "*"
requests = "*"
certifi = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
